fixed potential overflow issue by setting a strict height

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ section {
     margin-left: auto;
     margin-right: auto;
     padding: 2rem;
-    height: calc(100vh - 50px);
+    min-height: calc(100vh - 50px);
 }
 
 /* @media (max-width: 528px) {
